# agent-team

./: .gitignore  CODE_REVIEW_REPORT.md  DISCORD_BOT_SETUP.md  README.md  REVIEW.md  REVIEW_REFACTOR.md  REVIEW_REPORT.md  WORKFORCE_V1_PLAN.md  agent
agent-tool/scripts/: config.sh  create.sh  start.sh  stop.sh
agent-tool/skills/agent-manager/: SKILL.md
agent-tool/skills/project-manager/: SKILL.md
agent-tool/skills/task-manager/: task
agent-tool/templates/: .env.example
scripts/: config.sh  create.sh  start.sh  stop.sh
skills/agent-manager/: SKILL.md
skills/agent-register/: SKILL.md
skills/agent-unregister/: SKILL.md
skills/task-manager/: SKILL.md
task-service/: CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  app.py  background.py  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schema.sql  security.py  utils.py
task-service/routers/: __init__.py  agents.py  channels.py  dashboard.py  projects.py  tasks.py
task-service/scripts/: README.md  dev-clean.sh  dev-logs.sh  dev-restart.sh  dev-seed.sh  dev-start.sh  dev-test.sh  dev.sh
task-service/skill/: SKILL.md
task-service/tests/: COVERAGE_REPORT.md  README.md  test_app.py
templates/: SOUL.example.md  config.example.toml  docker-compose.example.yml
